# retailworks-snowflake

./: .gitignore  .snowflake_databases_dev.json  .snowflake_databases_test.json  .snowflake_schemas_dev.json  .snowflake_warehouses_dev.json  .snowflake_warehouses_test.json  DEPLOYMENT.md  README.md  main.py  pyproject.toml  snowflake.yml  snowflake_project_requirements.md
.github/workflows/: ci-cd-pipeline.yml
.gitops/: deploy.yml
ddl/procedures/: business_logic_procedures.sql
ddl/schemas/: 01_create_database.sql
ddl/tables/: analytics_schema_tables.sql  customers_schema_tables.sql  hr_schema_tables.sql  products_schema_tables.sql  sales_schema_tables.sql  staging_schema_tables.sql
ddl/views/: sales_analytics_views.sql
dml/migrations/: add_discount_column.sql
dml/sample_data/: 01_populate_dimensional_data.sql  02_populate_master_data.sql  03_populate_transactional_data.sql  04_create_additional_staging_tables.sql  05_load_sample_data_to_tables.sql  README_data_loading.md  categories.csv  create_staging_tables.sql  customer_segments.csv  departments.csv  direct_load_data.py  generate_sample_data.py  load_addresses_simple.py  load_csv_data.py  load_large_data.py  positions.csv  (+7 more)
docs/: ci-cd-deployment-guide.md  deployment_guide.md  project-completion-summary.md  snowflake_devops_guide.md  testing-guide.md
jenkins/: Jenkinsfile
schemas/: database.yaml  file_formats.yaml  stages.yaml  warehouse.yaml
scripts/: deploy_full_environment.py  deploy_gitops.sh  deploy_simple.sh  deploy_with_cli.sh  rollback_deployment.py
snowpark/: requirements.txt
(+11 files in other folders)
